// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LsCommand in a basic repo should list changes for a given scope 1`] = `
Array [
  "package-1 v1.0.0 ",
]
`;

exports[`LsCommand in a basic repo should list packages 1`] = `
Array [
  "package-1 v1.0.0          
package-2 v1.0.0          
package-3 v1.0.0          
package-4 v1.0.0          
package-5 v1.0.0 (private)",
]
`;

exports[`LsCommand in a basic repo should not list changes for ignored packages 1`] = `
Array [
  "package-1 v1.0.0 ",
]
`;

exports[`LsCommand in a repo with packages outside of packages/ should list packages 1`] = `
Array [
  "package-1 v1.0.0 
package-2 v1.0.0 
package-3 v1.0.0 ",
]
`;

exports[`LsCommand with --include-filtered-dependencies should list packages, including filtered ones 1`] = `
Array [
  "@test/package-2 v1.0.0 
@test/package-1 v1.0.0 ",
]
`;
